# GeomProc-cmake-recipes

./: CMakeLists.txt  Changelog.md  README.md  all-in.cpp  catch2.cmake  cgal.cmake  dgtal.cmake  directional.cmake  geogram.cmake  geometry-central.cmake  libigl.cmake  pybind11.cmake  spdlog.cmake  stb.cmake  stb_image.cmake
.github/workflows/: cmake-multi-platform.yml
recipes/: cgal.cmake  cinolib.cmake  dgtal.cmake  directional.cmake  geometry-central.cmake
